--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Flower Market</title>
 </head>
-<body>
-    <header class="mt-[30px] mb-30 m-[150px]">
+<body class="mx-[150px]">
+    <header class="mt-[30px] mb-30">
         <!-- navbar -->
         <nav class="flex justify-between">
-            <img src="B12A02-Responsive-Flowers/assets/logo.png" alt="">
+            <img src="assets/logo.png" alt="">
             <ul class="flex items-center gap-12">
                 <li class="font-bold"><a href="">Home</a></li>
                 <li class="text-gray-500"><a href="">Shop</a></li>
@@ -26,8 +26,69 @@
                 <h1 class="text-[65px] font-bold font-serif">ALWAYS <span class="text-orange-500">FRESH FLOWERS</span> </h1>
                 <p class="text-gray-500 text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
             </div>
-            <img class="w-[570px]" src="B12A02-Responsive-Flowers/assets/hero-flower.png" alt="">
+            <img class="w-[570px]" src="assets/hero-flower.png" alt="">
         </div>
     </header>
+    <main>
+        <!-- our plants section  -->
+        <section class="w-full items-center mx-auto mb-30">
+            <h1 class="text-[50px] font-bold text-center">
+                <span class="text-orange-500">Our</span> Plants
+            </h1>
+            <p class="text-gray-500 text-[22px] text-center w-[888px] mx-auto">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="grid grid-cols-4 mt-10 gap-5">
+                <div class="flex flex-col ">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
+                    <p class="font-bold text-[22px] text-center mb-[30px]">20 USD</p>
+                    <button class="bg-orange-500 text-white py-2 px-8 ">ADD TO CART</button>
+                </div>
+                <div class="flex flex-col ">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
+                    <p class="font-bold text-[22px] text-center mb-[30px]">20 USD</p>
+                    <button class="bg-orange-500 text-white py-2 px-8 ">ADD TO CART</button>
+                </div>
+                <div class="flex flex-col ">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
+                    <p class="font-bold text-[22px] text-center mb-[30px]">20 USD</p>
+                    <button class="bg-orange-500 text-white py-2 px-8 ">ADD TO CART</button>
+                </div>
+                <div class="flex flex-col ">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
+                    <p class="font-bold text-[22px] text-center mb-[30px]">20 USD</p>
+                    <button class="bg-orange-500 text-white py-2 px-8 ">ADD TO CART</button>
+                </div>
+                <div class="flex flex-col ">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
+                    <p class="font-bold text-[22px] text-center mb-[30px]">20 USD</p>
+                    <button class="bg-orange-500 text-white py-2 px-8 ">ADD TO CART</button>
+                </div>
+                <div class="flex flex-col ">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
+                    <p class="font-bold text-[22px] text-center mb-[30px]">20 USD</p>
+                    <button class="bg-orange-500 text-white py-2 px-8 ">ADD TO CART</button>
+                </div>
+                <div class="flex flex-col ">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
+                    <p class="font-bold text-[22px] text-center mb-[30px]">20 USD</p>
+                    <button class="bg-orange-500 text-white py-2 px-8 ">ADD TO CART</button>
+                </div>
+                <div class="flex flex-col ">
+                    <img src="assets/sample-flower-image.png" alt="">
+                    <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
+                    <p class="font-bold text-[22px] text-center mb-[30px]">20 USD</p>
+                    <button class="bg-orange-500 text-white py-2 px-8 ">ADD TO CART</button>
+                </div>
+                
+            </div>
+        </section>
+
+    </main>
 </body>
 </html>
