Latest Deals Page Added

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <img class="w-[570px]" src="assets/hero-flower.png" alt="">
         </div>
     </header>
-    <main>
+    <main class="max-w-fit">
+
         <!-- our plants section  -->
         <section class="w-full items-center mx-auto mb-30">
             <h1 class="text-[50px] font-bold text-center">
@@ -89,6 +90,35 @@
             </div>
         </section>
 
+
+        <!-- latest deals section  -->
+        <section class="mt-50 mb-32 ">
+            <h1 class="text-[50px] font-bold text-center">
+                <span class="text-orange-500">Latest</span> Deals
+            </h1>
+            <p class="text-gray-500 text-[22px] leading-relaxed text-center w-[888px] mx-auto">
+                Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
+            </p>
+            <div class="grid grid-cols-3 gap-7 mt-10 px-6 max-w-7xl ">
+                <div  style="background-image: url('assets/deal-bloom.png');"
+                    class="px-12 py-16 w-auto text-white bg-cover bg-center rounded-2xl flex items-center justify-center flex-col">
+                    <h1 class="font-bold text-center text-2xl font-serif">60% Off | Bloom Plant</h1>
+                    <button class="mt-4 underline font-bold text-white text-xl">Shop Now</button>
+                </div>
+                <div style="background-image: url('assets/deal-zabo.png');"
+                    class="col-span-2 row-span-2 px-32 py-44 w-auto text-white bg-cover rounded-2xl flex items-center justify-center flex-col ">
+                    <h1 class="font-bold text-5xl text-center font-serif">25% Off | Zabo Plant</h1>
+                    <button class="mt-6 underline font-bold text-white text-3xl ">Shop Now</button>
+                </div>
+                <div style="background-image: url('assets/deal-ana.png');"
+                    class="px-12 py-16 w-auto text-white bg-cover bg-center rounded-2xl flex items-center justify-center flex-col">
+                    <h1 class="font-bold text-center text-2xl  font-serif">30% Off | Ana Plant</h1>
+                    <button class="mt-4 underline font-bold text-white text-xl ">Shop Now</button>
+                </div>
+            </div>
+        </section>
+
+        </section>
     </main>
 </body>
 </html>
