Join the colorful bunch page added

--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
             </div>
         </section>
 
+        <!-- join the colorful bunch section  -->
+        <section class="px-38 py-52 h-[533px]" style="background-image: url(assets/news-letter-bg.png);">
+            <h1 class="text-center text-6xl mb-8 text-white font-bold font-serif w-3xl mx-auto">Join the colorful Bunch</h1>
+            <div class="flex">
+                <input class="px-5 py-3 w-3xl bg-white " placeholder="Write email">
+                <button class="bg-orange-500 text-white py-3 px-8 ">Subscribe</button>
+            </div>
         </section>
     </main>
 </body>
