Footer Page Added

--- a/index.html
+++ b/index.html
@@ -127,5 +127,36 @@
             </div>
         </section>
     </main>
+    <!-- footer  -->
+    <footer class="grid grid-cols-5 gap-28 mt-14 mb-14">
+        <div class="col-span-2">
+            <img src="assets/logo.png" alt="">
+            <p class="text-gray-500 text-[22px] w-85">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
+        </div>
+        <div>
+            <ul class="grid gap-8 text-gray-500">
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Shop</li>
+                <li>FAQ</li>
+                <li>Contact Us</li>
+            </ul>
+        </div>
+        <div>
+            <ul class="grid gap-8 text-gray-500">
+                <li>Features</li>
+                <li>Pricing</li>
+                <li>Privacy Policy</li>
+                <li>Terms of Service</li>
+                <li>Help Center</li>
+            </ul>
+        </div>
+        <div class="grid grid-cols-4 items-start gap-3">
+            <img src="assets/icon-linkedin.png" alt="">
+            <img class="p-1.5" src="assets/icon-twitter.png" alt="">
+            <img src="assets/icon-facebook.png" alt="">
+            <img src="assets/icon-youtube.png" alt="">
+        </div>
+    </footer>
 </body>
 </html>
