--- a/index.html
+++ b/index.html
@@ -90,6 +90,22 @@
             </div>
         </section>
 
+        <!-- flower and plants lover  -->
+        <section class="grid grid-cols-2 gap-16 mt-52 items-center">
+            <div>
+                <img src="assets/flower-store.png" alt="">
+                <img class="w-2xs absolute top-500 right-185" src="assets/trusted-badge.png" alt="">
+            </div>
+            <div class="justify-center items-center">
+                <h1 class="text-6xl font-semibold font-serif mb-6">Flower & Plant Lover</h1>
+                <ul class="list-disc list-outside">
+                    <li class="text-[22px] text-gray-500 mb-3 
+                    ">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="text-[22px] text-gray-500 mb-3">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    <li class="text-[22px] text-gray-500">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</li>
+                </ul>
+            </div>
+        </section>
 
         <!-- latest deals section  -->
         <section class="mt-50 mb-32 ">
