--- a/index.html
+++ b/index.html
@@ -7,26 +7,26 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <title>Flower Market</title>
 </head>
-<body class="mx-[150px]">
+<body class="w-6xl mx-1.5 p-1 md:mx-[150px]">
     <header class="mt-[30px] mb-30">
         <!-- navbar -->
-        <nav class="flex justify-between">
+        <nav class="flex justify-around md:justify-between ">
             <img src="assets/logo.png" alt="">
             <ul class="flex items-center gap-12">
-                <li class="font-bold"><a href="">Home</a></li>
-                <li class="text-gray-500"><a href="">Shop</a></li>
-                <li class="text-gray-500"><a href="">About Us</a></li>
+                <li class=" invisible md:font-bold "><a href="">Home</a></li>
+                <li class="invisible md:text-gray-500 "><a href="">Shop</a></li>
+                <li class="invisible md:text-gray-500 "><a href="">About Us</a></li>
                 <li><a href=""><i class="fa-solid fa-cart-shopping"></i>  Cart($56)</a></li>
             </ul>
         </nav>
 
         <!-- banner section  -->
-        <div class="flex mt-30 items-center justify-between">
-            <div class="w-[570px]">
+        <div class="flex flex-col-reverse md:flex md:mt-30 md:items-center justify-between">
+            <div class="mx-1 md:w-[570px]">
                 <h1 class="text-[65px] font-bold font-serif">ALWAYS <span class="text-orange-500">FRESH FLOWERS</span> </h1>
                 <p class="text-gray-500 text-[22px]">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion.</p>
             </div>
-            <img class="w-[570px]" src="assets/hero-flower.png" alt="">
+            <img class="md:w-100%" src="assets/hero-flower.png" alt="">
         </div>
     </header>
     <main class="max-w-fit">
@@ -36,8 +36,8 @@
             <h1 class="text-[50px] font-bold text-center">
                 <span class="text-orange-500">Our</span> Plants
             </h1>
-            <p class="text-gray-500 text-[22px] text-center w-[888px] mx-auto">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
-            <div class="grid grid-cols-4 mt-10 gap-5">
+            <p class="text-gray-500 text-[22px] text-center  mx-auto md: w-[888px] ">Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.</p>
+            <div class="grid grid-cols-2 md:grid-cols-4 mt-10 gap-5">
                 <div class="flex flex-col ">
                     <img src="assets/sample-flower-image.png" alt="">
                     <h2 class="font-medium text-[22px] text-center mt-[30px]">Lily Blossom</h2>
@@ -91,7 +91,7 @@
         </section>
 
         <!-- flower and plants lover  -->
-        <section class="grid grid-cols-2 gap-16 mt-52 items-center">
+        <section class="grid md:grid-cols-2 gap-16 mt-52 items-center">
             <div>
                 <img src="assets/flower-store.png" alt="">
                 <img class="w-2xs absolute top-500 right-185" src="assets/trusted-badge.png" alt="">
@@ -115,15 +115,15 @@
             <p class="text-gray-500 text-[22px] leading-relaxed text-center w-[888px] mx-auto">
                 Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic roses to exotic blooms, we offer a wide variety of fresh.
             </p>
-            <div class="grid grid-cols-3 gap-7 mt-10 px-6 max-w-7xl ">
+            <div class="grid md:grid-cols-3 gap-7 mt-10 px-6 max-w-7xl ">
                 <div  style="background-image: url('assets/deal-bloom.png');"
                     class="px-12 py-16 w-auto text-white bg-cover bg-center rounded-2xl flex items-center justify-center flex-col">
                     <h1 class="font-bold text-center text-2xl font-serif">60% Off | Bloom Plant</h1>
                     <button class="mt-4 underline font-bold text-white text-xl">Shop Now</button>
                 </div>
                 <div style="background-image: url('assets/deal-zabo.png');"
-                    class="col-span-2 row-span-2 px-32 py-44 w-auto text-white bg-cover rounded-2xl flex items-center justify-center flex-col ">
-                    <h1 class="font-bold text-5xl text-center font-serif">25% Off | Zabo Plant</h1>
+                    class="md:col-span-2 row-span-2 px-32 py-44 w-auto text-white bg-cover rounded-2xl flex items-center justify-center flex-col ">
+                    <h1 class="font-bold text-3xl md:text-5xl text-center font-serif">25% Off | Zabo Plant</h1>
                     <button class="mt-6 underline font-bold text-white text-3xl ">Shop Now</button>
                 </div>
                 <div style="background-image: url('assets/deal-ana.png');"
@@ -144,8 +144,8 @@
         </section>
     </main>
     <!-- footer  -->
-    <footer class="grid grid-cols-5 gap-28 mt-14 mb-14">
-        <div class="col-span-2">
+    <footer class="grid gap-10 md:grid-cols-5 md:gap-28 mt-14 mb-14">
+        <div class="md:col-span-2">
             <img src="assets/logo.png" alt="">
             <p class="text-gray-500 text-[22px] w-85">Indulge your senses with the beauty and fragrance of our fresh flower shop. </p>
         </div>
@@ -167,7 +167,7 @@
                 <li>Help Center</li>
             </ul>
         </div>
-        <div class="grid grid-cols-4 items-start gap-3">
+        <div class="flex md:grid grid-cols-4 items-start md: gap-3">
             <img src="assets/icon-linkedin.png" alt="">
             <img class="p-1.5" src="assets/icon-twitter.png" alt="">
             <img src="assets/icon-facebook.png" alt="">
